# custom-ERP

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
apps/core_finance/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/core_finance/migrations/: 0001_initial.py  0002_ledgerline_credit_base_ledgerline_currency_and_more.py  0003_customer_invoice_invoiceline.py  0004_customer_receivable_account_invoice_customer_and_more.py
apps/core_finance/tests/: test_currency_api.py  test_ledger_equations.py
apps/iam/: admin.py  apps.py  middleware.py  models.py  urls.py  views.py
apps/iam/migrations/: 0001_initial.py  0002_securityauditevent.py
apps/iam/tests/: test_audit_trail.py  test_security_matrix.py
config/: settings.py  urls.py
templates/core_finance/: invoice_print.html  reports.html
templates/iam/: dashboard.html  login.html  signup.html
