[project]
name = "enterprise-erp"
version = "0.1.0"
description = "ERP system for SME's"
authors = [
    {name = "kaggwe-marvin",email = "129196464+kaggwe-marvin@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "djangorestframework-stubs[compatible-mypy] (>=3.17.0,<4.0.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "django-filter (>=25.2,<26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "django-stubs (>=6.0.5,<7.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)"
]

[tool.poetry]
package-mode = false

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true
explicit_package_bases = true
mypy_path = "."

[tool.django-stubs]
django_settings_module = "config.settings"

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true

